all hard self paced

--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "83e9ea29",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "6dd05502",
    "metadata": {},
    "outputs": [
@@ -651,80 +651,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "e1039824",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: 'top', 2: 'bottom', 3: 'left', 1: 'right'}\n",
-      "0 1\n",
-      "right\n",
-      "1 0\n",
-      "top\n",
-      "2 3\n",
-      "left\n",
-      "3 1\n",
-      "right\n"
+     "ename": "NameError",
+     "evalue": "name 'combos_as_lists' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m level \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhard\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m seq_idx \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[43mcombos_as_lists\u001b[49m)):\n\u001b[1;32m      3\u001b[0m     testing_data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mseq_folder\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlevel\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mseq_idx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_testing.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m     seq_data \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      6\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstim\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[1;32m      7\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcorrect_key\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimg_folder\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[1;32m     11\u001b[0m     }\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'combos_as_lists' is not defined"
      ]
     }
    ],
    "source": [
     "level = \"hard\"\n",
-    "seq_idx = 0\n",
-    "testing_data = pd.read_csv(f\"{seq_folder}/{level}{seq_idx}_testing.csv\")\n",
+    "for seq_idx in range(len(combos_as_lists)):\n",
+    "    testing_data = pd.read_csv(f\"{seq_folder}/{level}{seq_idx}_testing.csv\")\n",
     "\n",
-    "seq_data = {\n",
-    "    \"stim\": [],\n",
-    "    \"correct_key\": [],\n",
-    "    \"type\": [],\n",
-    "    \"set_size\": [],\n",
-    "    \"img_folder\": [],\n",
-    "}\n",
+    "    seq_data = {\n",
+    "        \"stim\": [],\n",
+    "        \"correct_key\": [],\n",
+    "        \"type\": [],\n",
+    "        \"set_size\": [],\n",
+    "        \"img_folder\": [],\n",
+    "    }\n",
     "\n",
-    "key_dir_mapping = {\n",
-    "    testing_data.top_key.unique()[0]: \"top\",\n",
-    "    testing_data.bottom_key.unique()[0]: \"bottom\",\n",
-    "    testing_data.left_key.unique()[0]: \"left\",\n",
-    "    testing_data.right_key.unique()[0]: \"right\",\n",
-    "}\n",
-    "print(key_dir_mapping)\n",
-    "food_mapping = {}\n",
-    "# Fix the groupby issue by getting the first row for each stimulus\n",
-    "for stim, group in testing_data.groupby(\"stim\"):\n",
-    "    row = group.iloc[0]  # Get the first row of each group\n",
+    "    key_dir_mapping = {\n",
+    "        testing_data.top_key.unique()[0]: \"top\",\n",
+    "        testing_data.bottom_key.unique()[0]: \"bottom\",\n",
+    "        testing_data.left_key.unique()[0]: \"left\",\n",
+    "        testing_data.right_key.unique()[0]: \"right\",\n",
+    "    }\n",
+    "    print(key_dir_mapping)\n",
+    "    food_mapping = {}\n",
+    "    # Fix the groupby issue by getting the first row for each stimulus\n",
+    "    for stim, group in testing_data.groupby(\"stim\"):\n",
+    "        row = group.iloc[0]  # Get the first row of each group\n",
     "\n",
-    "    print(stim, row.correct_key)\n",
-    "    corr_dir = key_dir_mapping[row.correct_key]\n",
-    "    print(corr_dir)\n",
-    "    \n",
-    "    food_mapping[stim] =  row[f\"{corr_dir}_img\"]\n",
+    "        print(stim, row.correct_key)\n",
+    "        corr_dir = key_dir_mapping[row.correct_key]\n",
+    "        print(corr_dir)\n",
+    "        \n",
+    "        food_mapping[stim] =  row[f\"{corr_dir}_img\"]\n",
     "\n",
-    "for s, c in food_mapping.items():\n",
-    "    seq_data[\"stim\"].append(s)\n",
-    "    seq_data[\"correct_key\"].append(c)\n",
-    "    seq_data[\"type\"].append(\"food\")\n",
-    "    seq_data[\"set_size\"].append(testing_data.set_size.unique()[0])\n",
-    "    seq_data[\"img_folder\"].append(testing_data.img_folder.unique()[0])\n",
+    "    for s, c in food_mapping.items():\n",
+    "        seq_data[\"stim\"].append(s)\n",
+    "        seq_data[\"correct_key\"].append(c)\n",
+    "        seq_data[\"type\"].append(\"food\")\n",
+    "        seq_data[\"set_size\"].append(testing_data.set_size.unique()[0])\n",
+    "        seq_data[\"img_folder\"].append(testing_data.img_folder.unique()[0])\n",
     "\n",
-    "key_dir_list = [\n",
-    "    testing_data.top_key.unique()[0],\n",
-    "    testing_data.bottom_key.unique()[0],\n",
-    "    testing_data.left_key.unique()[0],\n",
-    "    testing_data.right_key.unique()[0],\n",
-    "]\n",
-    "for i, key_dir in enumerate(key_dir_list):\n",
-    "    seq_data[\"stim\"].append(i)\n",
-    "    seq_data[\"correct_key\"].append(key_dir)\n",
-    "    seq_data[\"type\"].append(\"direction\")\n",
-    "    seq_data[\"set_size\"].append(testing_data.set_size.unique()[0])\n",
-    "    seq_data[\"img_folder\"].append(testing_data.img_folder.unique()[0])\n",
+    "    key_dir_list = [\n",
+    "        testing_data.top_key.unique()[0],\n",
+    "        testing_data.bottom_key.unique()[0],\n",
+    "        testing_data.left_key.unique()[0],\n",
+    "        testing_data.right_key.unique()[0],\n",
+    "    ]\n",
+    "    for i, key_dir in enumerate(key_dir_list):\n",
+    "        seq_data[\"stim\"].append(i)\n",
+    "        seq_data[\"correct_key\"].append(key_dir)\n",
+    "        seq_data[\"type\"].append(\"direction\")\n",
+    "        seq_data[\"set_size\"].append(testing_data.set_size.unique()[0])\n",
+    "        seq_data[\"img_folder\"].append(testing_data.img_folder.unique()[0])\n",
     "\n",
-    "seq_data = pd.DataFrame(seq_data)\n",
-    "seq_data = seq_data[['stim', 'correct_key', 'img_folder',  'set_size', 'type']]\n",
-    "seq_data.to_csv(f\"{seq_folder}/self-paced_{level}{seq_idx}_testing.csv\", index=False)\n"
+    "    seq_data = pd.DataFrame(seq_data)\n",
+    "    seq_data = seq_data[['stim', 'correct_key', 'img_folder',  'set_size', 'type']]\n",
+    "    seq_data.to_csv(f\"{seq_folder}/self-paced_{level}{seq_idx}_testing.csv\", index=False)\n"
    ]
   },
   {
