--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -651,19 +651,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "e1039824",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'combos_as_lists' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m level \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhard\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m seq_idx \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[43mcombos_as_lists\u001b[49m)):\n\u001b[1;32m      3\u001b[0m     testing_data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mseq_folder\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlevel\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mseq_idx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_testing.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m     seq_data \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      6\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstim\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[1;32m      7\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcorrect_key\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimg_folder\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[1;32m     11\u001b[0m     }\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'combos_as_lists' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'top', 2: 'bottom', 3: 'left', 1: 'right'}\n",
+      "0 1\n",
+      "right\n",
+      "1 0\n",
+      "top\n",
+      "2 3\n",
+      "left\n",
+      "3 1\n",
+      "right\n",
+      "{0: 'top', 2: 'bottom', 3: 'left', 1: 'right'}\n",
+      "0 2\n",
+      "bottom\n",
+      "1 1\n",
+      "right\n",
+      "2 0\n",
+      "top\n",
+      "3 3\n",
+      "left\n",
+      "4 2\n",
+      "bottom\n",
+      "5 0\n",
+      "top\n",
+      "{0: 'top', 2: 'bottom', 3: 'left', 1: 'right'}\n",
+      "0 2\n",
+      "bottom\n",
+      "1 0\n",
+      "top\n",
+      "2 3\n",
+      "left\n",
+      "3 1\n",
+      "right\n",
+      "{0: 'top', 2: 'bottom', 3: 'left', 1: 'right'}\n",
+      "0 1\n",
+      "right\n",
+      "1 2\n",
+      "bottom\n",
+      "2 2\n",
+      "bottom\n",
+      "3 0\n",
+      "top\n",
+      "4 2\n",
+      "bottom\n",
+      "5 2\n",
+      "bottom\n",
+      "{0: 'top', 2: 'bottom', 3: 'left', 1: 'right'}\n",
+      "0 3\n",
+      "left\n",
+      "1 0\n",
+      "top\n",
+      "2 1\n",
+      "right\n",
+      "3 3\n",
+      "left\n",
+      "{0: 'top', 2: 'bottom', 3: 'left', 1: 'right'}\n",
+      "0 3\n",
+      "left\n",
+      "1 0\n",
+      "top\n",
+      "2 2\n",
+      "bottom\n",
+      "3 0\n",
+      "top\n",
+      "4 1\n",
+      "right\n",
+      "5 1\n",
+      "right\n"
      ]
     }
    ],
@@ -701,7 +762,7 @@
     "    for s, c in food_mapping.items():\n",
     "        seq_data[\"stim\"].append(s)\n",
     "        seq_data[\"correct_key\"].append(c)\n",
-    "        seq_data[\"type\"].append(\"food\")\n",
+    "        seq_data[\"type\"].append(0)\n",
     "        seq_data[\"set_size\"].append(testing_data.set_size.unique()[0])\n",
     "        seq_data[\"img_folder\"].append(testing_data.img_folder.unique()[0])\n",
     "\n",
@@ -714,7 +775,7 @@
     "    for i, key_dir in enumerate(key_dir_list):\n",
     "        seq_data[\"stim\"].append(i)\n",
     "        seq_data[\"correct_key\"].append(key_dir)\n",
-    "        seq_data[\"type\"].append(\"direction\")\n",
+    "        seq_data[\"type\"].append(1)\n",
     "        seq_data[\"set_size\"].append(testing_data.set_size.unique()[0])\n",
     "        seq_data[\"img_folder\"].append(testing_data.img_folder.unique()[0])\n",
     "\n",
