add medium level self pace test

--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "e1039824",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
     }
    ],
    "source": [
-    "level = \"hard\"\n",
+    "level = \"medium\"\n",
     "for seq_idx in range(len(combos_as_lists)):\n",
     "    testing_data = pd.read_csv(f\"{seq_folder}/{level}{seq_idx}_testing.csv\")\n",
     "\n",
