--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "e1039824",
    "metadata": {},
    "outputs": [
@@ -659,72 +659,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: 'top', 2: 'bottom', 3: 'left', 1: 'right'}\n",
-      "0 1\n",
-      "right\n",
-      "1 0\n",
-      "top\n",
-      "2 3\n",
-      "left\n",
-      "3 1\n",
-      "right\n",
-      "{0: 'top', 2: 'bottom', 3: 'left', 1: 'right'}\n",
-      "0 2\n",
+      "{3: 'top', 0: 'bottom', 1: 'left', 2: 'right'}\n",
+      "0 0\n",
       "bottom\n",
       "1 1\n",
-      "right\n",
-      "2 0\n",
-      "top\n",
-      "3 3\n",
       "left\n",
-      "4 2\n",
-      "bottom\n",
-      "5 0\n",
-      "top\n",
-      "{0: 'top', 2: 'bottom', 3: 'left', 1: 'right'}\n",
+      "2 1\n",
+      "left\n",
+      "3 2\n",
+      "right\n",
+      "{3: 'top', 0: 'bottom', 1: 'left', 2: 'right'}\n",
       "0 2\n",
-      "bottom\n",
+      "right\n",
       "1 0\n",
-      "top\n",
-      "2 3\n",
-      "left\n",
-      "3 1\n",
-      "right\n",
-      "{0: 'top', 2: 'bottom', 3: 'left', 1: 'right'}\n",
-      "0 1\n",
-      "right\n",
-      "1 2\n",
       "bottom\n",
       "2 2\n",
-      "bottom\n",
-      "3 0\n",
-      "top\n",
-      "4 2\n",
-      "bottom\n",
-      "5 2\n",
-      "bottom\n",
-      "{0: 'top', 2: 'bottom', 3: 'left', 1: 'right'}\n",
-      "0 3\n",
+      "right\n",
+      "3 1\n",
       "left\n",
-      "1 0\n",
+      "4 1\n",
+      "left\n",
+      "5 1\n",
+      "left\n",
+      "{3: 'top', 0: 'bottom', 1: 'left', 2: 'right'}\n",
+      "0 3\n",
+      "top\n",
+      "1 3\n",
       "top\n",
       "2 1\n",
-      "right\n",
-      "3 3\n",
       "left\n",
-      "{0: 'top', 2: 'bottom', 3: 'left', 1: 'right'}\n",
+      "3 1\n",
+      "left\n",
+      "{3: 'top', 0: 'bottom', 1: 'left', 2: 'right'}\n",
       "0 3\n",
-      "left\n",
-      "1 0\n",
+      "top\n",
+      "1 3\n",
       "top\n",
       "2 2\n",
-      "bottom\n",
-      "3 0\n",
-      "top\n",
-      "4 1\n",
       "right\n",
+      "3 2\n",
+      "right\n",
+      "4 0\n",
+      "bottom\n",
+      "5 2\n",
+      "right\n",
+      "{3: 'top', 0: 'bottom', 1: 'left', 2: 'right'}\n",
+      "0 3\n",
+      "top\n",
+      "1 0\n",
+      "bottom\n",
+      "2 3\n",
+      "top\n",
+      "3 2\n",
+      "right\n",
+      "{3: 'top', 0: 'bottom', 1: 'left', 2: 'right'}\n",
+      "0 0\n",
+      "bottom\n",
+      "1 2\n",
+      "right\n",
+      "2 3\n",
+      "top\n",
+      "3 2\n",
+      "right\n",
+      "4 3\n",
+      "top\n",
       "5 1\n",
-      "right\n"
+      "left\n"
      ]
     }
    ],
@@ -853,7 +853,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dl4rl",
+   "display_name": "analysis",
    "language": "python",
    "name": "python3"
   },
@@ -867,7 +867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
