--- a/tools/shaping_trans_seqs.ipynb
+++ b/tools/shaping_trans_seqs.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "id": "a703eb80",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -28,17 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "id": "5414564c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 2, 3, 1])"
+       "array([0, 1, 3, 2])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8790c35a",
    "metadata": {},
    "outputs": [],
@@ -89,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "id": "00254e8b",
    "metadata": {},
    "outputs": [
@@ -99,7 +90,7 @@
        "3"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "id": "4fba8ff0",
    "metadata": {},
    "outputs": [],
@@ -290,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "id": "2005c971",
    "metadata": {},
    "outputs": [],
@@ -389,14 +380,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "id": "2ce3d7e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Could not find arrangement without consecutive key_dir after 9000 attempts\n",
+      "Warning: Could not find arrangement without consecutive key_dir after 9000 attempts\n"
+     ]
+    }
+   ],
    "source": [
     "# testing round - two iteration per direction per stimulus\n",
     "LAST_BLOCK_ITER = 18\n",
-    "SZ_TO_ITER = {4: 12, 6: 8}\n",
+    "SZ_TO_ITER = {4: 15, 6: 10}\n",
     "NUM_TEST_ITER = 4\n",
     "\n",
     "img_set = 0\n",
