add more trials

--- a/tools/shaping_trans_seqs.ipynb
+++ b/tools/shaping_trans_seqs.ipynb
@@ -26,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 3, 2])"
+       "array([3, 0, 2, 1])"
       ]
      },
      "execution_count": 2,
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "2005c971",
    "metadata": {},
    "outputs": [],
@@ -375,12 +375,15 @@
     "        nonshaping_blocks,\n",
     "        trans_shop_mapping,\n",
     "        stim_food_mapping,\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "def self_paced_seq(sr_mapping):\n",
+    "    return pd.DataFrame({'stim': np.arange(len(sr_mapping)), 'correct_key': sr_mapping})    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2ce3d7e0",
    "metadata": {},
    "outputs": [
@@ -395,13 +398,13 @@
    ],
    "source": [
     "# testing round - two iteration per direction per stimulus\n",
-    "LAST_BLOCK_ITER = 18\n",
+    "LAST_BLOCK_ITER = 24\n",
     "SZ_TO_ITER = {4: 15, 6: 10}\n",
     "NUM_TEST_ITER = 4\n",
     "\n",
     "img_set = 0\n",
     "set_size = 6\n",
-    "for seq_idx in range(3):\n",
+    "for seq_idx in range(2):\n",
     "    shaping_blocks, nonshaping_blocks, trans_shop_mapping, stim_food_mapping = (\n",
     "        generate_learning_round(LAST_BLOCK_ITER, set_size, img_set, SZ_TO_ITER, 4, NUM_FOOD)\n",
     "    )\n",
@@ -417,6 +420,15 @@
     "    testing_data[\"set_size\"] = set_size\n",
     "    testing_data = testing_data[OUTPUT_COL_ORDER]\n",
     "\n",
+    "    self_paced_seq_data = []\n",
+    "    for t, mapping in zip(['trans', 'food'], [trans_shop_mapping, stim_food_mapping]):\n",
+    "        seq_data = self_paced_seq(mapping)\n",
+    "        seq_data['type'] = t\n",
+    "        self_paced_seq_data.append(seq_data)\n",
+    "\n",
+    "    self_paced_seq_data = pd.concat(self_paced_seq_data)\n",
+    "    self_paced_seq_data['set_size'] = set_size\n",
+    "    self_paced_seq_data['img_folder'] = img_set\n",
     "    for name, data in zip(\n",
     "        [\"shaping\", \"nonshaping\"], [shaping_blocks, nonshaping_blocks]\n",
     "    ):\n",
@@ -425,7 +437,8 @@
     "        concated_data = concated_data[OUTPUT_COL_ORDER]\n",
     "        concated_data.to_csv(f\"{seq_folder}/{name}_trans{seq_idx}_learning.csv\", index=False)\n",
     "\n",
-    "    testing_data.to_csv(f\"{seq_folder}/trans{seq_idx}_testing.csv\", index=False)    "
+    "    testing_data.to_csv(f\"{seq_folder}/trans{seq_idx}_testing.csv\", index=False)\n",
+    "    self_paced_seq_data.to_csv(f\"{seq_folder}/trans{seq_idx}_self_paced_testing.csv\", index=False)"
    ]
   }
  ],
