--- a/tools/shaping_trans_seqs.ipynb
+++ b/tools/shaping_trans_seqs.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "a703eb80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -13,29 +22,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import math\n",
+    "import itertools\n",
     "\n",
     "from seq_utils import generate_kv_mapping"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "5414564c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3, 0, 2, 1])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "generate_kv_mapping(4, 4)"
    ]
   },
   {
@@ -113,18 +102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "4fba8ff0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from seq_utils import generate_sequence_optimized, shuffle_with_mask, swap_by_indices\n",
+    "from seq_utils import shuffle_with_mask, swap_by_indices\n",
     "\n",
     "\n",
     "def shuffle_with_consecutive_check(stim_seq, key_dir, idx_check=1):\n",
     "    # Pair stim_seq and key_dir by index and shuffle the pairs\n",
     "    # Shuffle pairs while ensuring no consecutive key_dir values\n",
-    "    max_attempts = 9000\n",
+    "    max_attempts = 12000\n",
     "    for attempt in range(max_attempts):\n",
     "        paired_data = list(zip(stim_seq, key_dir))\n",
     "\n",
@@ -167,12 +156,22 @@
     "\n",
     "\n",
     "def generate_seq_pair(num_stims, num_iter_per_stim, num_directions=4):\n",
-    "    stim_seq = np.repeat(np.arange(num_stims), num_iter_per_stim)\n",
-    "    key_dir = np.tile(np.arange(num_directions), len(stim_seq) // 4)\n",
-    "    for i in [0, 1]:\n",
-    "        # best effort to avoid consecutive in stim seq first and then key_dir\n",
-    "        paired_data = shuffle_with_consecutive_check(stim_seq, key_dir, i)\n",
-    "        stim_seq, key_dir = zip(*paired_data)\n",
+    "    # stim_seq = np.repeat(np.arange(num_stims), num_iter_per_stim)\n",
+    "    # key_dir = np.tile(np.arange(num_directions), len(stim_seq) // 4)\n",
+    "    # for i in [0, 1]:\n",
+    "    #     # best effort to avoid consecutive in stim seq first and then key_dir\n",
+    "    #     paired_data = shuffle_with_consecutive_check(stim_seq, key_dir, i)\n",
+    "    #     stim_seq, key_dir = zip(*paired_data)\n",
+    "    stim_seq = list(\n",
+    "        itertools.chain.from_iterable(\n",
+    "            np.random.permutation(num_stims) for _ in range(num_iter_per_stim)\n",
+    "        )\n",
+    "    )\n",
+    "    key_dir = list(\n",
+    "        itertools.chain.from_iterable(\n",
+    "            np.random.permutation(num_directions) for _ in range(len(stim_seq) // num_directions)\n",
+    "        )\n",
+    "    )\n",
     "\n",
     "    return np.array(stim_seq), np.array(key_dir)\n",
     "\n",
@@ -281,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "2005c971",
    "metadata": {},
    "outputs": [],
@@ -383,19 +382,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "2ce3d7e0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Could not find arrangement without consecutive key_dir after 9000 attempts\n",
-      "Warning: Could not find arrangement without consecutive key_dir after 9000 attempts\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# testing round - two iteration per direction per stimulus\n",
     "LAST_BLOCK_ITER = 24\n",
