fix stim iteration

--- a/tools/reveral_seqs.ipynb
+++ b/tools/reveral_seqs.ipynb
@@ -278,25 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:00<00:00, 135.11it/s]\n",
-      "100%|██████████| 2/2 [00:00<00:00, 174.57it/s]"
+      "100%|██████████| 2/2 [00:00<00:00, 242.40it/s]\n",
+      "100%|██████████| 2/2 [00:00<00:00, 343.78it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}]\n",
-      "[{0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}]\n",
-      "[{0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}]\n",
-      "[{0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}]\n"
+      "[{0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}]\n",
+      "[{0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}]\n",
+      "[{0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}]\n",
+      "[{0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}]\n"
      ]
     },
     {
@@ -317,7 +317,7 @@
     "for idx, bs in enumerate([first_block_structure, second_block_structure]):\n",
     "    seqmkr = V2RWMSequenceMaker(\n",
     "        exp_type=exp_type,\n",
-    "        num_reps=num_reps,\n",
+    "        num_reps=4,\n",
     "        block_structure=bs,\n",
     "        num_conditions=2,\n",
     "        exact_reps=exact_reps,\n",
@@ -560,12 +560,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "block  is_oneshot\n",
+      "1.0    0.0           30\n",
+      "2.0    0.0           30\n",
+      "3.0    0.0           30\n",
+      "4.0    0.0           30\n",
+      "5.0    0.0           30\n",
+      "6.0    0.0           30\n",
+      "7.0    1.0           30\n",
+      "8.0    0.0           30\n",
+      "9.0    0.0           30\n",
+      "10.0   0.0           30\n",
+      "11.0   0.0           30\n",
+      "12.0   0.0           30\n",
+      "13.0   0.0           30\n",
+      "14.0   1.0           30\n",
+      "dtype: int64\n",
+      "block  is_oneshot\n",
+      "1.0    0.0           30\n",
+      "2.0    0.0           30\n",
+      "3.0    0.0           30\n",
+      "4.0    0.0           30\n",
+      "5.0    0.0           30\n",
+      "6.0    0.0           30\n",
+      "7.0    1.0           30\n",
+      "8.0    0.0           30\n",
+      "9.0    0.0           30\n",
+      "10.0   0.0           30\n",
+      "11.0   0.0           30\n",
+      "12.0   0.0           30\n",
+      "13.0   0.0           30\n",
+      "14.0   1.0           30\n",
+      "dtype: int64\n",
+      "block  is_oneshot\n",
+      "1.0    0.0           30\n",
+      "2.0    0.0           30\n",
+      "3.0    0.0           30\n",
+      "4.0    0.0           30\n",
+      "5.0    0.0           30\n",
+      "6.0    0.0           30\n",
+      "7.0    1.0           30\n",
+      "8.0    0.0           30\n",
+      "9.0    0.0           30\n",
+      "10.0   0.0           30\n",
+      "11.0   0.0           30\n",
+      "12.0   0.0           30\n",
+      "13.0   0.0           30\n",
+      "14.0   1.0           30\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in np.arange(1, 11):\n",
-    "    df = pd.read_csv(f\"../reverse-points/v2/seq{i}_learning.csv\", header=None).T\n",
+    "for i in np.arange(1, 4):\n",
+    "    df = pd.read_csv(f\"../reverse-points/seqv2/seq{i}_learning.csv\", header=None).T\n",
     "\n",
     "    colnames = [\n",
     "        \"stim\",\n",
@@ -579,7 +634,7 @@
     "    ]\n",
     "\n",
     "    df.columns = colnames\n",
-    "    print(df.groupby([\"set_size\", \"trial_type\"]).block.nunique())"
+    "    print(df.groupby([\"block\", \"is_oneshot\"]).size())"
    ]
   },
   {
