add practice seq

--- a/tools/reveral_seqs_practice.ipynb
+++ b/tools/reveral_seqs_practice.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,26 +276,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'reverse_points'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "exp_type"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -366,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -374,74 +354,18 @@
      "output_type": "stream",
      "text": [
       "set_size  trial_type\n",
-      "2.0       0.0           2\n",
-      "          1.0           2\n",
-      "6.0       0.0           2\n",
-      "          1.0           2\n",
-      "Name: block, dtype: int64\n",
-      "set_size  trial_type\n",
-      "2.0       0.0           2\n",
-      "          1.0           2\n",
-      "6.0       0.0           2\n",
-      "          1.0           2\n",
-      "Name: block, dtype: int64\n",
-      "set_size  trial_type\n",
-      "2.0       0.0           2\n",
-      "          1.0           2\n",
-      "6.0       0.0           2\n",
-      "          1.0           2\n",
-      "Name: block, dtype: int64\n",
-      "set_size  trial_type\n",
-      "2.0       0.0           2\n",
-      "          1.0           2\n",
-      "6.0       0.0           2\n",
-      "          1.0           2\n",
-      "Name: block, dtype: int64\n",
-      "set_size  trial_type\n",
-      "2.0       0.0           2\n",
-      "          1.0           2\n",
-      "6.0       0.0           2\n",
-      "          1.0           2\n",
-      "Name: block, dtype: int64\n",
-      "set_size  trial_type\n",
-      "2.0       0.0           2\n",
-      "          1.0           2\n",
-      "6.0       0.0           2\n",
-      "          1.0           2\n",
-      "Name: block, dtype: int64\n",
-      "set_size  trial_type\n",
-      "2.0       0.0           2\n",
-      "          1.0           2\n",
-      "6.0       0.0           2\n",
-      "          1.0           2\n",
-      "Name: block, dtype: int64\n",
-      "set_size  trial_type\n",
-      "2.0       0.0           2\n",
-      "          1.0           2\n",
-      "6.0       0.0           2\n",
-      "          1.0           2\n",
-      "Name: block, dtype: int64\n",
-      "set_size  trial_type\n",
-      "2.0       0.0           2\n",
-      "          1.0           2\n",
-      "6.0       0.0           2\n",
-      "          1.0           2\n",
-      "Name: block, dtype: int64\n",
-      "set_size  trial_type\n",
-      "2.0       0.0           2\n",
-      "          1.0           2\n",
-      "6.0       0.0           2\n",
-      "          1.0           2\n",
-      "Name: block, dtype: int64\n"
+      "2.0       0.0           1\n",
+      "          1.0           1\n",
+      "Name: block, dtype: int64 1 [1. 2.]\n"
      ]
     }
    ],
    "source": [
     "# exp_type = \"pseudoRWMReps3\"\n",
     "\n",
-    "for i in np.arange(1, 11):\n",
+    "for i in np.arange(1, 2):\n",
     "    df = pd.read_csv(\n",
-    "        f\"../reverse-points/v1/seq{i}_learning.csv\", header=None\n",
+    "        f\"../reverse-points/v1/seq{i}_practice.csv\", header=None\n",
     "    ).T\n",
     "\n",
     "    colnames = [\n",
@@ -457,12 +381,12 @@
     "    ]\n",
     "\n",
     "    df.columns = colnames\n",
-    "    print(df.groupby([\"set_size\", \"trial_type\"]).block.nunique())"
+    "    print(df.groupby([\"set_size\", \"trial_type\"]).block.nunique(), i, df.img_folder.unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -498,125 +422,283 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   stim  correct_key  set_size  block  img_folder  stim_img  trial_type\n",
-       "0   2.0          1.0       6.0    1.0         1.0       6.0         1.0\n",
-       "1   4.0          2.0       6.0    1.0         1.0       4.0         1.0"
+       "    stim  correct_key  set_size  block  img_folder  stim_img  trial_type\n",
+       "0    1.0          0.0       2.0    1.0         1.0       5.0         1.0\n",
+       "1    2.0          1.0       2.0    1.0         1.0       3.0         1.0\n",
+       "2    1.0          0.0       2.0    1.0         1.0       5.0         1.0\n",
+       "3    2.0          1.0       2.0    1.0         1.0       3.0         1.0\n",
+       "4    2.0          1.0       2.0    1.0         1.0       3.0         1.0\n",
+       "5    1.0          0.0       2.0    1.0         1.0       5.0         1.0\n",
+       "6    1.0          0.0       2.0    1.0         1.0       5.0         1.0\n",
+       "7    2.0          1.0       2.0    1.0         1.0       3.0         1.0\n",
+       "8    2.0          1.0       2.0    1.0         1.0       3.0         1.0\n",
+       "9    1.0          0.0       2.0    1.0         1.0       5.0         1.0\n",
+       "10   2.0          1.0       2.0    1.0         1.0       3.0         1.0\n",
+       "11   1.0          0.0       2.0    1.0         1.0       5.0         1.0\n",
+       "12   2.0          1.0       2.0    2.0         2.0       1.0         0.0\n",
+       "13   1.0          0.0       2.0    2.0         2.0       6.0         0.0\n",
+       "14   2.0          1.0       2.0    2.0         2.0       1.0         0.0\n",
+       "15   1.0          0.0       2.0    2.0         2.0       6.0         0.0\n",
+       "16   2.0          1.0       2.0    2.0         2.0       1.0         0.0\n",
+       "17   1.0          0.0       2.0    2.0         2.0       6.0         0.0\n",
+       "18   2.0          1.0       2.0    2.0         2.0       1.0         0.0\n",
+       "19   1.0          0.0       2.0    2.0         2.0       6.0         0.0\n",
+       "20   2.0          1.0       2.0    2.0         2.0       1.0         0.0\n",
+       "21   1.0          0.0       2.0    2.0         2.0       6.0         0.0\n",
+       "22   1.0          0.0       2.0    2.0         2.0       6.0         0.0\n",
+       "23   2.0          1.0       2.0    2.0         2.0       1.0         0.0"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "block  set_size\n",
-       "1.0    6.0         [1.0]\n",
-       "2.0    2.0         [1.0]\n",
-       "3.0    2.0         [0.0]\n",
-       "4.0    6.0         [0.0]\n",
-       "5.0    2.0         [0.0]\n",
-       "6.0    2.0         [1.0]\n",
-       "7.0    6.0         [0.0]\n",
-       "8.0    6.0         [1.0]\n",
-       "Name: trial_type, dtype: object"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.groupby([\"block\", \"set_size\"]).trial_type.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "block  stim\n",
-       "1.0    1.0     [13]\n",
-       "       2.0     [13]\n",
-       "       3.0     [13]\n",
-       "       4.0     [13]\n",
-       "       5.0     [13]\n",
-       "       6.0     [13]\n",
-       "2.0    1.0     [13]\n",
-       "       2.0     [13]\n",
-       "3.0    1.0     [13]\n",
-       "       2.0     [13]\n",
-       "4.0    1.0     [13]\n",
-       "       2.0     [13]\n",
-       "       3.0     [13]\n",
-       "       4.0     [13]\n",
-       "       5.0     [13]\n",
-       "       6.0     [13]\n",
-       "5.0    1.0     [13]\n",
-       "       2.0     [13]\n",
-       "6.0    1.0     [13]\n",
-       "       2.0     [13]\n",
-       "7.0    1.0     [13]\n",
-       "       2.0     [13]\n",
-       "       3.0     [13]\n",
-       "       4.0     [13]\n",
-       "       5.0     [13]\n",
-       "       6.0     [13]\n",
-       "8.0    1.0     [13]\n",
-       "       2.0     [13]\n",
-       "       3.0     [13]\n",
-       "       4.0     [13]\n",
-       "       5.0     [13]\n",
-       "       6.0     [13]\n",
-       "Name: img_folder, dtype: object"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.groupby([\"block\", \"stim\"]).img_folder.apply(\n",
-    "    lambda x: np.sort(np.unique(x, return_counts=True)[1])\n",
-    ")"
+    "df"
    ]
   }
  ],
